# ai-security-framework

./: .env.example  .env.production.example  .gitignore  AISEC_PENTESTER_FILES.md  AISec-Pentester-Implementation-Plan.md  DEPLOYMENT_DEMO.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  README.md  README_AISEC.md  TECHNICAL_DEVELOPMENT_RECAP.md  Video-Production-Guide.md  code.txt  deploy.sh  diagrams.html  docker-compose.production.yml  docker-compose.yml  install.sh  interactive-architecture-modal-content.html  launch_aisec.py  launch_tool.py  netlify.toml  package-lock.json  package.json  package.sh  pyproject.toml  server.js  setup.py
aisec_pentester/: README.md  __init__.py  __main__.py  demo.py  requirements.txt
aisec_pentester/core/: config_manager.py  framework.py  logger.py  reporting.py
aisec_pentester/modules/: __init__.py
aisec_pentester/modules/adversarial/: __init__.py  generator.py
aisec_pentester/modules/extraction/: __init__.py  scanner.py
aisec_pentester/modules/poisoning/: __init__.py  detector.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md
monitoring/: prometheus.yml
nginx/: nginx.conf
output/: assessment_summary_aisec_demo_20250731_111859_20250731_111859.json  security_assessment_aisec_demo_20250731_102248.json  security_assessment_aisec_demo_20250731_111859.json  security_report_aisec_demo_20250731_111859_20250731_111859.html
production/: gunicorn.conf.py  start.sh  supervisord.conf
public/: debug.html  index.html  interactive-architecture.html  main.js  styles.css  styles.css.backup  test.html
src/api/: routes.js
src/utils/: atlas-integration.js  threat-modeling.js
tests/: test_framework.py
vscode/: extensions.json  launch.json  settings.json  yoba.txt
